# CmdUtilitiesLinuxTester

./: .gitignore  README.md  pyproject.toml  pytest.ini
tests/: test_cat.py  test_cp.py  test_ls.py  test_mv.py  test_rm.py
utils/: base_utility.py  cat_utility.py  cp_utility.py  ls_utility.py  mv_utility.py  rm_utility.py
