[tool.poetry]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = ["Yuri Gerasimov <killzone15@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
pylint = "^3.3.4"

[tool.poetry.dev-dependencies]
pytest = "^8.3.4"
pytest-subprocess = "^1.5.3"
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
